--- a/ML/HW/HW1/3.ipynb
+++ b/ML/HW/HW1/3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "--- Running Experiment: F1 vs Max Features ---\n",
+      "--- Running Experiment: F1 vs Max Features ---\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Max Features: 10 | Vocab Size: 10 | F1-Score: 0.5310\n",
       "Max Features: 50 | Vocab Size: 50 | F1-Score: 0.6785\n",
       "Max Features: 100 | Vocab Size: 100 | F1-Score: 0.7024\n",
@@ -649,6 +655,80 @@
     "    print(f\"Alpha: {alpha} | F1-Score: {metrics['F1-Score']:.4f}\")\n",
     "\n",
     "print(f\"\\nFinal F1 Scores for Alphas: {results_alpha}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Final Evaluation on Test Set (Max Feat=5000, Alpha=1.0) ---\n",
+      "\n",
+      "--- Final Performance Metrics ---\n",
+      "Accuracy: 0.8503\n",
+      "F1-Score: 0.8484\n",
+      "Precision: 0.8592\n",
+      "Recall: 0.8379\n",
+      "\n",
+      "--- Confusion Matrix (Actual vs. Predicted) ---\n",
+      "True Positive (TP, Actual Positive, Predicted Positive): 3142\n",
+      "False Positive (FP, Actual Negative, Predicted Positive): 515\n",
+      "False Negative (FN, Actual Positive, Predicted Negative): 608\n",
+      "True Negative (TN, Actual Negative, Predicted Negative): 3235\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- 4. Final Evaluation on Test Set (Part D) ---\n",
+    "\n",
+    "# Best hyperparameters chosen from Validation results:\n",
+    "FINAL_MAX_FEATURES = 5000\n",
+    "FINAL_ALPHA = 1.0\n",
+    "\n",
+    "print(f\"\\n--- Final Evaluation on Test Set (Max Feat={FINAL_MAX_FEATURES}, Alpha={FINAL_ALPHA}) ---\")\n",
+    "\n",
+    "# 1. Vectorize (fit only on X_train, transform X_test)\n",
+    "final_vectorizer = CustomCountVectorizer(\n",
+    "    preprocessor_func=tokenize_without_stopwords, \n",
+    "    max_features=FINAL_MAX_FEATURES\n",
+    ")\n",
+    "X_train_final_vec = final_vectorizer.fit_transform(X_train_raw) # Use raw train set\n",
+    "X_test_final_vec = final_vectorizer.transform(X_test_raw) # Use raw test set (unseen data)\n",
+    "\n",
+    "# 2. Train Final Model\n",
+    "final_model = CustomNaiveBayes(alpha=FINAL_ALPHA)\n",
+    "final_model.fit(X_train_final_vec, y_train, final_vectorizer.feature_names)\n",
+    "\n",
+    "# 3. Predict on Test Set\n",
+    "y_test_pred = final_model.predict(X_test_final_vec)\n",
+    "\n",
+    "# 4. Calculate Final Metrics\n",
+    "final_metrics = calculate_metrics(y_test, y_test_pred)\n",
+    "\n",
+    "# Calculate Confusion Matrix components\n",
+    "tp = np.sum((y_test == 1) & (y_test_pred == 1))\n",
+    "fp = np.sum((y_test == 0) & (y_test_pred == 1))\n",
+    "fn = np.sum((y_test == 1) & (y_test_pred == 0))\n",
+    "tn = np.sum((y_test == 0) & (y_test_pred == 0))\n",
+    "total_samples = len(y_test)\n",
+    "accuracy = (tp + tn) / total_samples\n",
+    "\n",
+    "print(f\"\\n--- Final Performance Metrics ---\")\n",
+    "print(f\"Accuracy: {accuracy:.4f}\")\n",
+    "print(f\"F1-Score: {final_metrics['F1-Score']:.4f}\")\n",
+    "print(f\"Precision: {tp / (tp + fp) if (tp + fp) > 0 else 0:.4f}\")\n",
+    "print(f\"Recall: {tp / (tp + fn) if (tp + fn) > 0 else 0:.4f}\")\n",
+    "\n",
+    "print(f\"\\n--- Confusion Matrix (Actual vs. Predicted) ---\")\n",
+    "print(f\"True Positive (TP, Actual Positive, Predicted Positive): {tp}\")\n",
+    "print(f\"False Positive (FP, Actual Negative, Predicted Positive): {fp}\")\n",
+    "print(f\"False Negative (FN, Actual Positive, Predicted Negative): {fn}\")\n",
+    "print(f\"True Negative (TN, Actual Negative, Predicted Negative): {tn}\")"
    ]
   }
  ],
