--- a/ML/HW/HW1/4.ipynb
+++ b/ML/HW/HW1/4.ipynb
@@ -478,6 +478,112 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "29f8532e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- 1. New Function: Probabilistic Inference and Classification ---\n",
+    "\n",
+    "def predict_classification(bn, data, target_node):\n",
+    "    \"\"\"\n",
+    "    Performs classification on the target_node using the trained BN model.\n",
+    "    It calculates P(Target=1 | Evidence) and P(Target=0 | Evidence) for each sample.\n",
+    "    \n",
+    "    Since exact inference is complex, this function simplifies the calculation\n",
+    "    based on the Chain Rule and observed evidence.\n",
+    "    \"\"\"\n",
+    "    y_pred = []\n",
+    "    \n",
+    "    for _, sample in data.iterrows():\n",
+    "        # Nodes that are NOT the target node are considered Evidence (E)\n",
+    "        evidence_nodes = [n for n in bn.nodes if n != target_node]\n",
+    "        \n",
+    "        # Calculate P(E, Target=1) and P(E, Target=0) using the Chain Rule:\n",
+    "        # P(X_1, ..., X_N) = P(X_1|Pa_1) * ... * P(X_N|Pa_N)\n",
+    "        \n",
+    "        log_prob_target_1 = 0\n",
+    "        log_prob_target_0 = 0\n",
+    "        \n",
+    "        # --- Likelihood Calculation (Numerator) ---\n",
+    "        \n",
+    "        # Scenario 1: Target = 1 (Lung=1)\n",
+    "        for node in bn.nodes:\n",
+    "            # 1. Determine the value of the node based on the scenario\n",
+    "            if node == target_node:\n",
+    "                node_value = 1 # We are calculating P(E, Lung=1)\n",
+    "            else:\n",
+    "                node_value = sample[node] # Evidence nodes take observed value\n",
+    "            \n",
+    "            # 2. Get P(Node=value | Parents)\n",
+    "            parents = bn.structure[node]\n",
+    "            cpts = bn.cpts[node]\n",
+    "            prob = 0\n",
+    "            \n",
+    "            if parents:\n",
+    "                # Parent configuration is based on the current scenario\n",
+    "                parent_config = tuple(1 if p == target_node else sample[p] for p in parents)\n",
+    "                \n",
+    "                # Fetch CPT value\n",
+    "                cpt_series = cpts['P_1'] if node_value == 1 else cpts['P_0']\n",
+    "                \n",
+    "                # Handling safe CPT lookup\n",
+    "                try:\n",
+    "                    prob = cpt_series.loc[parent_config]\n",
+    "                except KeyError:\n",
+    "                    # Fallback if configuration was not seen in training (should be rare due to Laplace)\n",
+    "                    prob = 1e-6 \n",
+    "                    \n",
+    "            else:\n",
+    "                # No parents: use prior P(Node)\n",
+    "                prob = cpts['P_1'] if node_value == 1 else cpts['P_0']\n",
+    "                \n",
+    "            log_prob_target_1 += math.log(prob)\n",
+    "            \n",
+    "        # Scenario 2: Target = 0 (Lung=0) - Recalculate P(E, Target=0)\n",
+    "        for node in bn.nodes:\n",
+    "            if node == target_node:\n",
+    "                node_value = 0 # We are calculating P(E, Lung=0)\n",
+    "            else:\n",
+    "                node_value = sample[node]\n",
+    "            \n",
+    "            parents = bn.structure[node]\n",
+    "            cpts = bn.cpts[node]\n",
+    "            prob = 0\n",
+    "            \n",
+    "            if parents:\n",
+    "                parent_config = tuple(0 if p == target_node else sample[p] for p in parents) # Target is 0 here\n",
+    "                cpt_series = cpts['P_1'] if node_value == 1 else cpts['P_0']\n",
+    "                \n",
+    "                try:\n",
+    "                    prob = cpt_series.loc[parent_config]\n",
+    "                except KeyError:\n",
+    "                    prob = 1e-6\n",
+    "                    \n",
+    "            else:\n",
+    "                prob = cpts['P_1'] if node_value == 1 else cpts['P_0']\n",
+    "                \n",
+    "            log_prob_target_0 += math.log(prob)\n",
+    "        \n",
+    "        \n",
+    "        # --- Final Classification ---\n",
+    "        # P(Target|E) = P(E, Target) / P(E)\n",
+    "        # We only need to compare P(E, Target=1) vs P(E, Target=0) since P(E) is the same denominator.\n",
+    "        \n",
+    "        prob_target_1 = math.exp(log_prob_target_1)\n",
+    "        prob_target_0 = math.exp(log_prob_target_0)\n",
+    "        \n",
+    "        # Classify based on the highest joint probability\n",
+    "        if prob_target_1 > prob_target_0:\n",
+    "            y_pred.append(1)\n",
+    "        else:\n",
+    "            y_pred.append(0)\n",
+    "            \n",
+    "    return np.array(y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "ebc6d0a2",
    "metadata": {},
@@ -618,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "03e2a6cc",
    "metadata": {},
    "outputs": [
@@ -632,29 +738,12 @@
       "True Structure (ASIA): Acc=0.9933, F1=0.8837\n",
       "Naive Bayes (Lung Target): Acc=0.9693, F1=0.6102\n",
       "\n",
-      "--- Classification Results Summary (Test Data) ---\n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "Missing optional dependency 'tabulate'.  Use pip or conda to install tabulate.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mFile \u001b[39m\u001b[32md:\\Uni\\venv\\Lib\\site-packages\\pandas\\compat\\_optional.py:135\u001b[39m, in \u001b[36mimport_optional_dependency\u001b[39m\u001b[34m(name, extra, errors, min_version)\u001b[39m\n\u001b[32m    134\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m135\u001b[39m     module = \u001b[43mimportlib\u001b[49m\u001b[43m.\u001b[49m\u001b[43mimport_module\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    136\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mC:\\Python311\\Lib\\importlib\\__init__.py:126\u001b[39m, in \u001b[36mimport_module\u001b[39m\u001b[34m(name, package)\u001b[39m\n\u001b[32m    125\u001b[39m         level += \u001b[32m1\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m126\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_bootstrap\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_gcd_import\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m[\u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpackage\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m<frozen importlib._bootstrap>:1206\u001b[39m, in \u001b[36m_gcd_import\u001b[39m\u001b[34m(name, package, level)\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m<frozen importlib._bootstrap>:1178\u001b[39m, in \u001b[36m_find_and_load\u001b[39m\u001b[34m(name, import_)\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m<frozen importlib._bootstrap>:1142\u001b[39m, in \u001b[36m_find_and_load_unlocked\u001b[39m\u001b[34m(name, import_)\u001b[39m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'tabulate'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 190\u001b[39m\n\u001b[32m    188\u001b[39m df_class_results = pd.DataFrame(classification_results).T\n\u001b[32m    189\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m--- Classification Results Summary (Test Data) ---\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m190\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdf_class_results\u001b[49m\u001b[43m.\u001b[49m\u001b[43mto_markdown\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m) \n\u001b[32m    192\u001b[39m \u001b[38;5;66;03m# The image tag for the plot goes here\u001b[39;00m\n\u001b[32m    193\u001b[39m \u001b[38;5;66;03m#\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32md:\\Uni\\venv\\Lib\\site-packages\\pandas\\util\\_decorators.py:333\u001b[39m, in \u001b[36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    327\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(args) > num_allow_args:\n\u001b[32m    328\u001b[39m     warnings.warn(\n\u001b[32m    329\u001b[39m         msg.format(arguments=_format_argument_list(allow_args)),\n\u001b[32m    330\u001b[39m         \u001b[38;5;167;01mFutureWarning\u001b[39;00m,\n\u001b[32m    331\u001b[39m         stacklevel=find_stack_level(),\n\u001b[32m    332\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m333\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32md:\\Uni\\venv\\Lib\\site-packages\\pandas\\core\\frame.py:2994\u001b[39m, in \u001b[36mDataFrame.to_markdown\u001b[39m\u001b[34m(self, buf, mode, index, storage_options, **kwargs)\u001b[39m\n\u001b[32m   2992\u001b[39m kwargs.setdefault(\u001b[33m\"\u001b[39m\u001b[33mtablefmt\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mpipe\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m   2993\u001b[39m kwargs.setdefault(\u001b[33m\"\u001b[39m\u001b[33mshowindex\u001b[39m\u001b[33m\"\u001b[39m, index)\n\u001b[32m-> \u001b[39m\u001b[32m2994\u001b[39m tabulate = \u001b[43mimport_optional_dependency\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mtabulate\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m   2995\u001b[39m result = tabulate.tabulate(\u001b[38;5;28mself\u001b[39m, **kwargs)\n\u001b[32m   2996\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m buf \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32md:\\Uni\\venv\\Lib\\site-packages\\pandas\\compat\\_optional.py:138\u001b[39m, in \u001b[36mimport_optional_dependency\u001b[39m\u001b[34m(name, extra, errors, min_version)\u001b[39m\n\u001b[32m    136\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n\u001b[32m    137\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m errors == \u001b[33m\"\u001b[39m\u001b[33mraise\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m--> \u001b[39m\u001b[32m138\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(msg)\n\u001b[32m    139\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    141\u001b[39m \u001b[38;5;66;03m# Handle submodules: if we have submodule, grab parent module from sys.modules\u001b[39;00m\n",
-      "\u001b[31mImportError\u001b[39m: Missing optional dependency 'tabulate'.  Use pip or conda to install tabulate."
+      "--- Classification Results Summary (Test Data) ---\n",
+      "|                           |   Accuracy |   Precision |   Recall |   F1-Score |\n",
+      "|:--------------------------|-----------:|------------:|---------:|-----------:|\n",
+      "| K2 Optimal (Max P=2)      |   0.993333 |    0.863636 | 0.904762 |   0.883721 |\n",
+      "| True Structure (ASIA)     |   0.993333 |    0.863636 | 0.904762 |   0.883721 |\n",
+      "| Naive Bayes (Lung Target) |   0.969333 |    0.473684 | 0.857143 |   0.610169 |\n"
      ]
     }
    ],
