CV presentation done.

--- a/DL/HW4/HW4-159404027/HW4-Code/HW4-Code/RNN Q2/rnn_captioning.ipynb
+++ b/DL/HW4/HW4-159404027/HW4-Code/HW4-Code/RNN Q2/rnn_captioning.ipynb
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -513,7 +513,19 @@
     "id": "l-oiW9Ut6bhH",
     "outputId": "bb43447c-f2a1-484d-fd2b-cc09e7d953d7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01ma5_helper\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m decode_captions\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Sample a minibatch and show the reshaped 112x112 images and captions\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m sample_idx = \u001b[43mtorch\u001b[49m.randint(\u001b[32m0\u001b[39m, num_train, (VIS_BATCH_SIZE, ))\n\u001b[32m      6\u001b[39m sample_images = data_dict[\u001b[33m\"\u001b[39m\u001b[33mtrain_images\u001b[39m\u001b[33m\"\u001b[39m][sample_idx]\n\u001b[32m      7\u001b[39m sample_captions = data_dict[\u001b[33m\"\u001b[39m\u001b[33mtrain_captions\u001b[39m\u001b[33m\"\u001b[39m][sample_idx]\n",
+      "\u001b[31mNameError\u001b[39m: name 'torch' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from a5_helper import decode_captions\n",
     "\n",
@@ -556,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -576,10 +588,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "next_h error:  2.3200594408551194e-09\n"
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrnn_captioning\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m rnn_step_forward\n\u001b[32m      3\u001b[39m N, D, H = \u001b[32m3\u001b[39m, \u001b[32m10\u001b[39m, \u001b[32m4\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m x = \u001b[43mtorch\u001b[49m.linspace(-\u001b[32m0.4\u001b[39m, \u001b[32m0.7\u001b[39m, steps=N * D, **to_double).view(N, D)\n\u001b[32m      6\u001b[39m prev_h = torch.linspace(-\u001b[32m0.2\u001b[39m, \u001b[32m0.5\u001b[39m, steps=N * H, **to_double).view(N, H)\n\u001b[32m      7\u001b[39m Wx = torch.linspace(-\u001b[32m0.1\u001b[39m, \u001b[32m0.9\u001b[39m, steps=D * H, **to_double).view(D, H)\n",
+      "\u001b[31mNameError\u001b[39m: name 'torch' is not defined"
      ]
     }
    ],
@@ -620,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -640,15 +656,14 @@
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'Tensor' and 'NoneType'",
+     "ename": "NameError",
+     "evalue": "name 'reset_seed' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 30\u001b[39m\n\u001b[32m     27\u001b[39m \u001b[38;5;66;03m# YOUR_TURN: Implement rnn_step_backward\u001b[39;00m\n\u001b[32m     28\u001b[39m dx, dprev_h, dWx, dWh, db = rnn_step_backward(dnext_h, cache)\n\u001b[32m---> \u001b[39m\u001b[32m30\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mdx error: \u001b[39m\u001b[33m\"\u001b[39m, \u001b[43mrel_error\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdx_num\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdx\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m     31\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mdprev_h error: \u001b[39m\u001b[33m\"\u001b[39m, rel_error(dprev_h_num, dprev_h))\n\u001b[32m     32\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mdWx error: \u001b[39m\u001b[33m\"\u001b[39m, rel_error(dWx_num, dWx))\n",
-      "\u001b[36mFile \u001b[39m\u001b[32md:\\Uni\\DL\\HW4\\HW4-Code\\HW4-Code\\RNN Q2\\helpers_module\\grad.py:120\u001b[39m, in \u001b[36mrel_error\u001b[39m\u001b[34m(x, y, eps)\u001b[39m\n\u001b[32m    104\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    105\u001b[39m \u001b[33;03mCompute the relative error between a pair of tensors x and y,\u001b[39;00m\n\u001b[32m    106\u001b[39m \u001b[33;03mwhich is defined as:\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    117\u001b[39m \u001b[33;03m- rel_error: Scalar giving the relative error between x and y\u001b[39;00m\n\u001b[32m    118\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    119\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\" returns relative error between x and y \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m120\u001b[39m top = (\u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[43m-\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m).abs().max().item()\n\u001b[32m    121\u001b[39m bot = (x.abs() + y.abs()).clamp(\u001b[38;5;28mmin\u001b[39m=eps).max().item()\n\u001b[32m    122\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m top / bot\n",
-      "\u001b[31mTypeError\u001b[39m: unsupported operand type(s) for -: 'Tensor' and 'NoneType'"
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrnn_captioning\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m rnn_step_backward\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mreset_seed\u001b[49m(\u001b[32m0\u001b[39m)\n\u001b[32m      4\u001b[39m N, D, H = \u001b[32m4\u001b[39m, \u001b[32m5\u001b[39m, \u001b[32m6\u001b[39m\n\u001b[32m      5\u001b[39m x = torch.randn(N, D, **to_double)\n",
+      "\u001b[31mNameError\u001b[39m: name 'reset_seed' is not defined"
      ]
     }
    ],
