HW5 DL Q3 done.

--- a/DL/HW5/Q3/Q3-verbose.ipynb
+++ b/DL/HW5/Q3/Q3-verbose.ipynb
@@ -1438,6 +1438,211 @@
     "            print(\"[Mutation] No mutation applied\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5244336a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "========== TEST ENVIRONMENT SETUP ==========\n",
+      "[Setup] Test dictionary: {'hello', 'algorithm', 'is', 'this', 'world', 'genetic'}\n",
+      "[Setup] Encoded text: itssg ksgit\n",
+      "\n",
+      "========== PERFECT CHROMOSOME CONSTRUCTION ==========\n",
+      "[PerfectKey] Applying manual mapping:\n",
+      "  i -> h\n",
+      "  t -> e\n",
+      "  s -> l\n",
+      "  g -> o\n",
+      "  k -> w\n",
+      "[PerfectKey] Perfect chromosome key created\n",
+      "[RandomKey] Random chromosome key created\n",
+      "\n",
+      "========== FITNESS EVALUATION ==========\n",
+      "[Fitness] Perfect chromosome decoded text:\n",
+      "  hello wlohe\n",
+      "[Fitness] Random chromosome decoded text:\n",
+      "  zjlls ulszj\n",
+      "[Fitness] Perfect key score: 25\n",
+      "[Fitness] Random key score:  0\n",
+      "[OK] Fitness function rewards correct decoding\n",
+      "\n",
+      "========== ORDERED CROSSOVER TEST ==========\n",
+      "[Crossover] Parent 1 key: ['t', 'm', 'i', 'o', 'c', 'w', 'g', 'd', 's', 'j', 'k', 'a', 'q', 'p', 'e', 'n', 'l', 'u', 'x', 'z', 'r', 'y', 'f', 'h', 'b', 'v']\n",
+      "[Crossover] Parent 2 key: ['u', 'b', 'o', 'k', 'l', 'c', 't', 'w', 'z', 'v', 'i', 'p', 's', 'j', 'n', 'r', 'f', 'q', 'y', 'g', 'm', 'd', 'a', 'x', 'h', 'e']\n",
+      "\n",
+      "[OX] Starting ordered crossover\n",
+      "[OX] Parent 1 key: ['t', 'm', 'i', 'o', 'c', 'w', 'g', 'd', 's', 'j', 'k', 'a', 'q', 'p', 'e', 'n', 'l', 'u', 'x', 'z', 'r', 'y', 'f', 'h', 'b', 'v']\n",
+      "[OX] Parent 2 key: ['u', 'b', 'o', 'k', 'l', 'c', 't', 'w', 'z', 'v', 'i', 'p', 's', 'j', 'n', 'r', 'f', 'q', 'y', 'g', 'm', 'd', 'a', 'x', 'h', 'e']\n",
+      "[OX] Crossover segment indices: start=14, end=22\n",
+      "[OX] Child 1 initial segment from Parent 1: [None, None, None, None, None, None, None, None, None, None, None, None, None, None, 'e', 'n', 'l', 'u', 'x', 'z', 'r', 'y', None, None, None, None]\n",
+      "[OX] Child 1 filled position 0 with b\n",
+      "[OX] Child 1 filled position 1 with o\n",
+      "[OX] Child 1 filled position 2 with k\n",
+      "[OX] Child 1 filled position 3 with c\n",
+      "[OX] Child 1 filled position 4 with t\n",
+      "[OX] Child 1 filled position 5 with w\n",
+      "[OX] Child 1 filled position 6 with v\n",
+      "[OX] Child 1 filled position 7 with i\n",
+      "[OX] Child 1 filled position 8 with p\n",
+      "[OX] Child 1 filled position 9 with s\n",
+      "[OX] Child 1 filled position 10 with j\n",
+      "[OX] Child 1 filled position 11 with f\n",
+      "[OX] Child 1 filled position 12 with q\n",
+      "[OX] Child 1 filled position 13 with g\n",
+      "[OX] Child 1 filled position 22 with m\n",
+      "[OX] Child 1 filled position 23 with d\n",
+      "[OX] Child 1 filled position 24 with a\n",
+      "[OX] Child 1 filled position 25 with h\n",
+      "[OX] Child 2 initial segment from Parent 2: [None, None, None, None, None, None, None, None, None, None, None, None, None, None, 'n', 'r', 'f', 'q', 'y', 'g', 'm', 'd', None, None, None, None]\n",
+      "[OX] Child 2 filled position 0 with t\n",
+      "[OX] Child 2 filled position 1 with i\n",
+      "[OX] Child 2 filled position 2 with o\n",
+      "[OX] Child 2 filled position 3 with c\n",
+      "[OX] Child 2 filled position 4 with w\n",
+      "[OX] Child 2 filled position 5 with s\n",
+      "[OX] Child 2 filled position 6 with j\n",
+      "[OX] Child 2 filled position 7 with k\n",
+      "[OX] Child 2 filled position 8 with a\n",
+      "[OX] Child 2 filled position 9 with p\n",
+      "[OX] Child 2 filled position 10 with e\n",
+      "[OX] Child 2 filled position 11 with l\n",
+      "[OX] Child 2 filled position 12 with u\n",
+      "[OX] Child 2 filled position 13 with x\n",
+      "[OX] Child 2 filled position 22 with z\n",
+      "[OX] Child 2 filled position 23 with h\n",
+      "[OX] Child 2 filled position 24 with b\n",
+      "[OX] Child 2 filled position 25 with v\n",
+      "[OX] Child 1 final key: ['b', 'o', 'k', 'c', 't', 'w', 'v', 'i', 'p', 's', 'j', 'f', 'q', 'g', 'e', 'n', 'l', 'u', 'x', 'z', 'r', 'y', 'm', 'd', 'a', 'h']\n",
+      "[OX] Child 2 final key: ['t', 'i', 'o', 'c', 'w', 's', 'j', 'k', 'a', 'p', 'e', 'l', 'u', 'x', 'n', 'r', 'f', 'q', 'y', 'g', 'm', 'd', 'z', 'h', 'b', 'v']\n",
+      "[OX] Crossover complete\n",
+      "[Crossover] Child 1 valid permutation? True\n",
+      "[Crossover] Child 2 valid permutation? True\n",
+      "[OK] Ordered crossover preserves permutations\n",
+      "\n",
+      "========== MUTATION TEST ==========\n",
+      "[Mutation] Key before mutation: ['b', 'o', 'k', 'c', 't', 'w', 'v', 'i', 'p', 's', 'j', 'f', 'q', 'g', 'e', 'n', 'l', 'u', 'x', 'z', 'r', 'y', 'm', 'd', 'a', 'h']\n",
+      "\n",
+      "[Mutation] Checking mutation\n",
+      "[Mutation] Current key: ['b', 'o', 'k', 'c', 't', 'w', 'v', 'i', 'p', 's', 'j', 'f', 'q', 'g', 'e', 'n', 'l', 'u', 'x', 'z', 'r', 'y', 'm', 'd', 'a', 'h']\n",
+      "[Mutation] Mutation rate: 1.0\n",
+      "[Mutation] Random roll: 0.7799480076237186\n",
+      "[Mutation] Swapping indices 12 and 20\n",
+      "[Mutation] Values before swap: q, r\n",
+      "[Mutation] Key after swap: ['b', 'o', 'k', 'c', 't', 'w', 'v', 'i', 'p', 's', 'j', 'f', 'r', 'g', 'e', 'n', 'l', 'u', 'x', 'z', 'q', 'y', 'm', 'd', 'a', 'h']\n",
+      "[Mutation] Key after mutation: ['b', 'o', 'k', 'c', 't', 'w', 'v', 'i', 'p', 's', 'j', 'f', 'r', 'g', 'e', 'n', 'l', 'u', 'x', 'z', 'q', 'y', 'm', 'd', 'a', 'h']\n",
+      "[OK] Mutation successfully altered chromosome\n",
+      "\n",
+      "========== TESTS COMPLETE ==========\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n========== TEST ENVIRONMENT SETUP ==========\")\n",
+    "\n",
+    "# 1. Setup small environment\n",
+    "test_dict = {\"hello\", \"world\", \"this\", \"is\", \"genetic\", \"algorithm\"}\n",
+    "test_encoded = \"itssg ksgit\"  # Intended to decode to \"hello world\"\n",
+    "\n",
+    "print(\"[Setup] Test dictionary:\", test_dict)\n",
+    "print(\"[Setup] Encoded text:\", test_encoded)\n",
+    "\n",
+    "\n",
+    "print(\"\\n========== PERFECT CHROMOSOME CONSTRUCTION ==========\")\n",
+    "\n",
+    "# 2. Create a \"Perfect\" Chromosome for this specific mapping\n",
+    "perfect_key = list(string.ascii_lowercase)\n",
+    "\n",
+    "mapping = {\n",
+    "    'i': 'h',\n",
+    "    't': 'e',\n",
+    "    's': 'l',\n",
+    "    'g': 'o',\n",
+    "    'k': 'w'\n",
+    "}\n",
+    "\n",
+    "print(\"[PerfectKey] Applying manual mapping:\")\n",
+    "for enc, dec in mapping.items():\n",
+    "    idx = string.ascii_lowercase.index(enc)\n",
+    "    perfect_key[idx] = dec\n",
+    "    print(f\"  {enc} -> {dec}\")\n",
+    "\n",
+    "perfect_chrom = Chromosome(perfect_key)\n",
+    "random_chrom = Chromosome()\n",
+    "\n",
+    "print(\"[PerfectKey] Perfect chromosome key created\")\n",
+    "print(\"[RandomKey] Random chromosome key created\")\n",
+    "\n",
+    "\n",
+    "print(\"\\n========== FITNESS EVALUATION ==========\")\n",
+    "\n",
+    "perfect_decoded = perfect_chrom.decode(test_encoded)\n",
+    "random_decoded = random_chrom.decode(test_encoded)\n",
+    "\n",
+    "perfect_score = calculate_fitness(perfect_chrom, test_encoded, test_dict)\n",
+    "random_score = calculate_fitness(random_chrom, test_encoded, test_dict)\n",
+    "\n",
+    "print(\"[Fitness] Perfect chromosome decoded text:\")\n",
+    "print(\" \", perfect_decoded)\n",
+    "\n",
+    "print(\"[Fitness] Random chromosome decoded text:\")\n",
+    "print(\" \", random_decoded)\n",
+    "\n",
+    "print(f\"[Fitness] Perfect key score: {perfect_score}\")\n",
+    "print(f\"[Fitness] Random key score:  {random_score}\")\n",
+    "\n",
+    "if perfect_score <= random_score:\n",
+    "    print(\"[WARNING] Perfect chromosome did NOT outperform random — fitness function may be flawed\")\n",
+    "else:\n",
+    "    print(\"[OK] Fitness function rewards correct decoding\")\n",
+    "\n",
+    "\n",
+    "print(\"\\n========== ORDERED CROSSOVER TEST ==========\")\n",
+    "\n",
+    "p1 = Chromosome()\n",
+    "p2 = Chromosome()\n",
+    "\n",
+    "print(\"[Crossover] Parent 1 key:\", p1.key)\n",
+    "print(\"[Crossover] Parent 2 key:\", p2.key)\n",
+    "\n",
+    "c1, c2 = ordered_crossover(p1, p2, verbose=True)\n",
+    "\n",
+    "valid_c1 = len(set(c1.key)) == 26\n",
+    "valid_c2 = len(set(c2.key)) == 26\n",
+    "\n",
+    "print(f\"[Crossover] Child 1 valid permutation? {valid_c1}\")\n",
+    "print(f\"[Crossover] Child 2 valid permutation? {valid_c2}\")\n",
+    "\n",
+    "if not (valid_c1 and valid_c2):\n",
+    "    print(\"[ERROR] Crossover produced invalid chromosome\")\n",
+    "else:\n",
+    "    print(\"[OK] Ordered crossover preserves permutations\")\n",
+    "\n",
+    "\n",
+    "print(\"\\n========== MUTATION TEST ==========\")\n",
+    "\n",
+    "before_mut = list(c1.key)\n",
+    "print(\"[Mutation] Key before mutation:\", before_mut)\n",
+    "\n",
+    "swap_mutation(c1, mutation_rate=1.0, verbose=True)  # Force mutation\n",
+    "\n",
+    "after_mut = c1.key\n",
+    "print(\"[Mutation] Key after mutation:\", after_mut)\n",
+    "\n",
+    "if before_mut == after_mut:\n",
+    "    print(\"[ERROR] Mutation failed — key unchanged\")\n",
+    "else:\n",
+    "    print(\"[OK] Mutation successfully altered chromosome\")\n",
+    "\n",
+    "\n",
+    "print(\"\\n========== TESTS COMPLETE ==========\")\n"
+   ]
   }
  ],
  "metadata": {
